Skip to content

clock integer overflow

Playing 22050 Hz mono PCM, I get this at start (via RTP):

../../src/clock/clock.c:163:24: runtime error: signed integer overflow: 37901395318 - -9223372036854775808 cannot be represented in type 'long int'
../../src/clock/clock.c:89:13: runtime error: signed integer overflow: -9223372036854775808 + -9223371998953380490 cannot be represented in type 'long int'
Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information