modules/access/rtp/session.c
@@ -144,7 +144,7 @@ rtp_source_create (demux_t *demux, const rtp_session_t *session,
     source->ssrc = ssrc;
     source->jitter = 0;
     source->ref_rtp = 0;
-    source->ref_ntp = UINT64_C (1) << 62;
+    source->ref_ntp = UINT64_C (1) << 51;
     source->max_seq = source->bad_seq = init_seq;
     source->last_seq = init_seq - 1;
     source->blocks = NULL;
